Add World class Add Variant and Collection template classes Implement Entity and System using Collection class

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="System.h" />
     <ClInclude Include="variant_helper.h" />
     <ClInclude Include="Vec2.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="COMInitializer.cpp" />
