Add algors.h ( erase_if and swap_and_pop_if ) Add Colors.h to Components.h Add constructors to components Add generic random access iterators ( ECS_Iterators.h ) Add observer and subject templated interfaces ( to be implemented by user ) Added some type-traits ( is_intrinsic_type and remove_cv_ref ) in ECS_type_traits.h Add shared_ref to ECS_utilities.h Add visitor ( for use with std::variant ) to ECS_utilities.h Add collection ( hopefully a helpful container for std::variant objects ) Add shared_pool ( Elements are stored contiguously, accessors return a reference counted pointer to those elements ) Make EntityBase handle adding, removing and finding components Entity is just a common type Implement Entity to use shared_pool for components ( though, can't imagine those need to be shared or reference counted ) World not templated Add some messages to process ( Message.h ) Add Receiver ( Receiver.h ) Add Sender ( Sender.h ) (^These will probably be replaced with observer/subject template interfaces) Recode System classes ( System base class handles adding, removing and finding entities ) Add WorldBase ( handles adding, removing and finding system classes ) Recode World ( implements game logic )

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="algors.h" />
     <ClInclude Include="ChiliException.h" />
     <ClInclude Include="ChiliMath.h" />
     <ClInclude Include="ChiliWin.h" />
@@ -149,19 +150,25 @@
     <ClInclude Include="COMInitializer.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="DXErr.h" />
+    <ClInclude Include="ECS_iterators.h" />
+    <ClInclude Include="ECS_observer.h" />
+    <ClInclude Include="ECS_type_traits.h" />
+    <ClInclude Include="ECS_Utilities.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FrameTimer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="Message.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="Receiver.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Sender.h" />
     <ClInclude Include="Shapes.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEffect.h" />
     <ClInclude Include="System.h" />
-    <ClInclude Include="variant_helper.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
@@ -176,6 +183,7 @@
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="System.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="FramebufferPS.hlsl">
@@ -244,6 +252,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Chili.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Things to consider.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
