Add ECS_PostOffice ( ECS_PostOffice.h ) for messaging. Add find_if to custom algorithms ( algors.h ) Change ObserverTypes to ObserverType template parameter for observer class ( ECS_observer.h ) Move is_similar, has_type, annd get_index from variant_helper.h to ECS_type_traits.h Add struct has_required ( ECS_type_traits.h ) Forward declare Movable and Drawable ( Message.h ) Add alias system_t ( Message.h ) Change shared_resource<System> to shared_resource<system_t> ( Message.h ) Add clear_messages() ( Receiver.h ) Change Sender to use shared_resource<Receiver> objects ( Sender.h ) Inherit ECS_PostOffice::ECS::MailBox; aliased as ECS_Mailbox by System ( System.h ) and WorldBase ( World.h )

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="DXErr.h" />
     <ClInclude Include="ECS_iterators.h" />
+    <ClInclude Include="ECS_PostOffice.h" />
     <ClInclude Include="ECS_observer.h" />
     <ClInclude Include="ECS_type_traits.h" />
     <ClInclude Include="ECS_Utilities.h" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEffect.h" />
     <ClInclude Include="System.h" />
+    <ClInclude Include="variant_helper.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
@@ -183,7 +185,6 @@
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Sound.cpp" />
-    <ClCompile Include="System.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="FramebufferPS.hlsl">
