Add Aliases temporarily until I can figure out how to organize the code better Add ECS_Mailbox as ECS_Entity parent Define ECS_Entity::remove_component functions Add ECS_Receiver.h and ECS_Sender.h to ECS_Factory.h Remove ReceiverList and SenderList template parameters for ECS_Factory Add ECS_Factory::release_all function to clear all resource pools in a specific order Make ECS_Mailbox::send_message public since library classes won't know what messages to send. Move ref_counter and resource to global namespace Fix circle drawing function in Graphics.cpp Use aliases for clarity

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Aliases.h" />
     <ClInclude Include="DeclarationsComponent.h" />
     <ClInclude Include="DeclarationsEntity.h" />
     <ClInclude Include="DeclarationsMessage.h" />
